# cantonlink

./: .gitignore  README.md  hardhat.config.ts  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
DOCUMENTATION/: fee_structure_strategy.md  fee_structure_strategy.md.metadata.json  implementation_plan.md  implementation_plan.md.metadata.json  implementation_plan.md.resolved.0  implementation_plan.md.resolved.1  implementation_plan.md.resolved.2  otc_deployment_costs.md  otc_deployment_costs.md.metadata.json  otc_deployment_costs.md.resolved  partner_setup_guide.md  partner_setup_guide.md.metadata.json  partner_setup_guide.md.resolved  task.md  task.md.metadata.json  task.md.resolved  task.md.resolved.0  task.md.resolved.1  task.md.resolved.10  task.md.resolved.11  task.md.resolved.12  task.md.resolved.13  task.md.resolved.14  task.md.resolved.15  task.md.resolved.2  task.md.resolved.3  task.md.resolved.4  task.md.resolved.5  task.md.resolved.6  task.md.resolved.7  task.md.resolved.8  task.md.resolved.9  walkthrough.md  walkthrough.md.metadata.json  walkthrough.md.resolved.0  walkthrough.md.resolved.1  walkthrough.md.resolved.2  walkthrough.md.resolved.3  walkthrough.md.resolved.4
contracts/: OTCEscrow.sol
contracts/solana/otc_escrow/programs/otc_escrow/: Cargo.toml
contracts/solana/otc_escrow/programs/otc_escrow/src/: lib.rs
public/: robots.txt
scripts/: canton-sandbox.conf  check-deploy-costs.mjs  deploy-abstract.mjs  deploy-all-otc.ps1  deploy-direct.mjs  deploy-everything.ps1  deploy-last2.mjs  deploy-megaeth-mainnet.mjs  deploy-megaeth.mjs  (+12 more)
(+100 files in other folders)
