[package]
name = "otc_escrow"
version = "0.1.0"
description = "OTC Escrow program for MoneyMove P2P trading"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "otc_escrow"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
